🐛 fix timer issue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="swipe_in">SwipeIn</string>
     <string name="tile_label_in">IN</string>
     <string name="tile_label_out">OUT</string>
+    <string name="label_quick_tracker">Quick Tracker</string>
 </resources>
