--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="label_quick_tracker">Quick Tracker</string>
     <string name="label_to">to</string>
     <string name="action_change_date">Change Date</string>
+    <string name="loading_swipe_sessions">Loading swipe sessions...</string>
 </resources>
