--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="label_quick_tracker">Quick Tracker</string>
     <string name="label_to">to</string>
     <string name="action_change_date">Change Date</string>
-    <string name="loading_swipe_sessions">Loading swipe sessions...</string>
+    <string name="loading_swipe_sessions">Loading swipe sessions…</string>
     <string name="channel_timer_name">Timer</string>
     <string name="channel_time_desc">Live tile timer</string>
-    <string name="notif_title_live_timer">Live Timer</string>
-    <string name="notif_content_live_timer">Live timer running in background</string>
+    <string name="notif_title_live_timer">Swipenetic Engine</string>
+    <string name="notif_content_live_timer">Ready to serve</string>
     <string name="label_total_swipe_time">Total Swipe</string>
 </resources>
