--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="label_total_in_time">In Swipe</string>
     <string name="label_total_out_time">Out Swipe</string>
     <string name="label_time_spent_coffee">Spent for coffee</string>
+    <string name="action_show_chart">Show Chart</string>
 </resources>
