--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="intro_add_tile">Seems like you have not added Tile. Please add swipenetic tile and restart the app</string>
     <string name="notif_title_alert">Alert</string>
     <string name="notif_title_over_swipe">Over Swipe Out</string>
+    <string name="channel_alert_name">Swipe Out Alert</string>
+    <string name="channel_alert_desc">To alert about remaining/exceeded swipe out time</string>
 </resources>
