--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="action_update">UPDATE</string>
     <string name="action_restart_app">RESTART APP</string>
     <string name="error_tile_add_ins">Please add tile, then press \'RESTART APP\'</string>
+    <string name="action_add_session">Add Session</string>
 </resources>
